# Gestiune-activitati

./: CMakeLists.txt  README.md  main.cpp
Business/: service.cpp  service.h
Console/: ui.cpp  ui.h
Domain/: activitate.cpp  activitate.h
Repo/: repo.cpp  repo.h
Tests/: tests.cpp  tests.h
Validator/: validate.cpp  validate.h
